# AllInOne

./: .gitignore  Makefile  README.md  allinone  allinone-project-doc.md  allinone-tasks.md  files.mk  functions.mk  main.cpp  main.hpp  rules.mk  sdl.supp  tasks.md  uml.drawio  valgrind-suppress.txt
Box/: Box.accessors.cpp  Box.cpp  Box.event.cpp  Box.hpp
Box/includes/: Box.hpp  defines.hpp  (+1 more)
Color/: Color.accessors.cpp  Color.cpp  Color.hpp
Config/: Config.cpp
Container/: Container.accessors.cpp  Container.cpp  Container.event.cpp  Container.hpp
Data/: Data.accessors.cpp  Data.cpp  Data.hpp
Draw/: Draw.basics.cpp  Draw.cpp  Draw.hpp
Engine/: Engine.cpp  engine.cpp
Error/: Error.cpp  Error.hpp
Event/: Event.cpp  Event.hpp
EventManager/: EventManager.cpp
FileParser/: FileParser.cpp
Information/: Information.cpp  Information.hpp
Load/: Load.cpp  Load.hpp
Thread/: Thread.cpp
Types/: Types.cpp
Utilities/: Utilities.color.hpp  Utilities.cpp  Utilities.defines.hpp  Utilities.hpp  Utilities.typedef.hpp
Utils/: Utils.cpp
Window/: Window.accessors.cpp  Window.cpp  Window.event.cpp  Window.hpp  Window.utils.cpp  Window.utils.hpp
default/: window.conf
docs/: api-reference.md  architecture.md  json-cpp-guide.md  makefile-explanation.md  plugin-development.md  tutoriel-uml.md  uml-diagrammes-visuels.md
includes/: defines.hpp  main.hpp  typedefs.hpp  types.hpp
plugins/image-viewer/: CMakeLists.txt  ImageViewerPlugin.cpp  ImageViewerPlugin.hpp
plugins/terminal/: CMakeLists.txt  TerminalPlugin.cpp  TerminalPlugin.hpp
src/: main.cpp
(+111 files in other folders)
